<!--
  ~ Copyright © 2017 Sollyu <https://www.sollyu.com/>
  ~
  ~ Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
  ~
  ~ This version of the GNU Lesser General Public License incorporates the terms and conditions of version 3 of the GNU General Public License, supplemented by the additional permissions listed below.
  -->

<resources>
    <string name="app_name">AppEnv</string>
    <string name="xposed_desc">i\'m english is bad. so sorry.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tip">Tip</string>
    <string name="splash_xposed_not_work_title">Finish</string>
    <string name="splash_xposed_not_work_content">The Xposed is not work.\nPlease check Xposed status.</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="cloud">Cloud</string>
    <string name="other">Other</string>
    <string name="donate">Donate</string>
    <string name="score">Score</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="detail_finish_snackbar">Save Success</string>
    <string name="finish">Finish</string>
    <string name="error">Error</string>
    <string name="online_url_soft">https://rawgit.com/kingsollyu/AppEnv-Kotlin/develop/online/app.env.soft.json</string>
    <string name="online_url_phone">https://rawgit.com/kingsollyu/AppEnv-Kotlin/develop/online/app.env.phone.json</string>
    <string name="settings_no_update">The current version is the latest version</string>
    <string name="settings_has_update">Last Version Name: %1$s\nLast Version Message: \n%2$s</string>
    <string name="settings_has_update_positive">OPEN URL</string>
    <string name="settings_update_progress">Check update…</string>
    <string name="settings_blog">Blog</string>
    <string name="settings_author">Author</string>
    <string name="settings_email">E-Mail</string>
    <string name="settings_github">Github</string>
    <string name="settings_update_soft">Update Soft Version</string>
    <string name="settings_update_phone">Update Phone List</string>
    <string name="settings_show_system_app">Show System App</string>
    <string name="random_all">Random All</string>
    <string name="run_app">Run App</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="force_stop_app">Stop App</string>
    <string name="save_config">Save Config</string>
    <string name="random">Random</string>
    <string name="delete_config">Delete Config</string>
    <string name="remote_random">Remote Random</string>
    <string name="solution">Solution</string>
    <string name="save_solution">Save Solution</string>
    <string name="load_solution">Load Solution</string>
    <string name="delete_solution">Delete Solution</string>
    <string name="detail_solution_save_success">Solution $1%s Save Success</string>
    <string name="detail_solution_save_title">Save Solution</string>
    <string name="detail_solution_save_hint">Input solution name</string>
    <string name="empty" />
    <string name="detail_solution_load_title">Load Solution</string>
    <string name="detail_solution_delete_title">Delete Solution</string>
    <string name="detail_solution_delete_success">Delete Solution Success: %1$s</string>
    <string name="settings_update_phone_success">Phone database update success.</string>
    <string name="detail_build_manufacturer">Build Manufacturer</string>
    <string name="detail_build_model">Build Model</string>
    <string name="detail_build_serial">Build Serial</string>
    <string name="detail_build_version_name">Build Version Name</string>
    <string name="detail_sim_phone_number">Phone Number</string>
    <string name="detail_sim_device_id">Imei</string>
    <string name="detail_sim_subscriber_id">Sim Subscriber Id</string>
    <string name="detail_sim_operator">Sim Operator</string>
    <string name="detail_sim_operator_name">Sim Operator Name</string>
    <string name="detail_sim_serial_number">Sim Serial Number</string>
    <string name="detail_sim__status">Sim Status</string>
    <string name="detail_wifi_name">Wifi Name</string>
    <string name="detail_wifi_bssid">Wifi BSSID</string>
    <string name="detail_wifi_mac_address">Wifi Mac Address</string>
    <string name="settings_issues">Issues</string>
    <string name="detail_run_app">Pls form desktop run app</string>
    <string name="detail_run_app_back">HOME</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">
        <Data>
            <![CDATA[
                    "<h2>AppEnv</h2>"
                    "Author: king.sollyu<br>"
                    "Contact: QQ: 191067617 (C.S.T)<br>"
                    "Description: Dynamically modify the software information<br>"
                    "Depend: <a href="http://repo.xposed.info/module/de.robv.android.xposed.installer">XPOSED</a> OR <a href="http://en.miui.com/thread-78894-1-1.html">WSM tools</a><br>"
                    "Update: Historic version <a href="https://github.com/kingsollyu/AppEnv-Kotlin/releases">CLICK HERE</a><br><br>"

                    "Copyright © <a href="http://www.sollyu.com">Sollyu</a> 2015-2017 Version %1$s<br><br>"

                    "<h2>Files</h2>"
                    "App Setting：%2$s<br>"
                    "Phone Database：%3$s<br>"
                    "Xposed Setting：%4$s<br>"
                    "<br>"

                    "<h2>This update</h2>"
                    "+ i'm english is so bad.<br>"
                    "+ i'm sorry, there no english<br>"

                    "<br>"
                    "<br>"
            ]]>
        </Data>
    </string>
    <string name="main_nav_header_desc">i\'m english so bad. :(</string>
    <string name="settings_show_desktop_icon">Show Desktop Icon</string>
    <string name="settings_show_desktop_icon_tip">You can open app in Xposed model.</string>
    <string name="settings_thinks">Thinks</string>
    <string name="main_xposed_fail">Xposed status error.</string>
    <string name="settings_use_root">Use Root</string>
    <string name="settings_use_root_content">no english. :(</string>
    <string name="detail_clear_success">Wipe data success</string>
    <string name="settings_use_root_available_fail">Request Root Fail</string>
    <string name="detail_sim_country_iso">Sim Country Iso</string>
    <string name="detail_language">Language</string>
    <string name="detail_display_dip">DPI</string>
    <string name="settings_use_app_data_config">Use app data Config</string>
    <string name="settings_use_app_data_config_content">Use app data Config?</string>
    <string name="splash_permission_write_storage_denied_content">AppEnv need write external storeage permission. :(</string>
    <string name="scan_qr">Scan QR</string>
    <string name="upload_config">Upload Config</string>
    <string name="settings_log">Logs</string>
    <string name="log_delete">Delete</string>
    <string name="log_reload">Reload</string>
    <string name="register_title">Register</string>
    <string name="register_processing">Registering…</string>
    <string name="settings_use_data_local_tmp">Use /data/local/tmp</string>
    <string name="settings_use_data_local_tmp_title">TIP</string>
    <string name="settings_use_data_local_tmp_content">Use /data/local/tmp</string>
    <string name="detail_phone_network_type">Network Type</string>
    <string name="hook_all_user">Hook All User</string>
    <string name="hook_all_app">hook all app</string>
    <string name="warring">Warrning</string>
    <string name="message_hook_all">d</string>
</resources>
