<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2017 Sollyu <https://www.sollyu.com/>
  ~
  ~ Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
  ~
  ~ This version of the GNU Lesser General Public License incorporates the terms and conditions of version 3 of the GNU General Public License, supplemented by the additional permissions listed below.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/refresh"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_cloud"
            android:icon="@drawable/ic_wb_cloudy"
            android:title="@string/cloud"/>
    </group>

    <item android:checkableBehavior="single" android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_credit_card"
                android:title="@string/donate"/>
            <item
                android:id="@+id/nav_score"
                android:icon="@drawable/ic_thumb_up"
                android:title="@string/score"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
