<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2017 Sollyu <https://www.sollyu.com/>
  ~
  ~ Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
  ~
  ~ This version of the GNU Lesser General Public License incorporates the terms and conditions of version 3 of the GNU General Public License, supplemented by the additional permissions listed below.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_w"
        android:imeOptions="actionSearch"
        android:inputType="textCapWords"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/menu_hook_user"
        android:title="@string/hook_all_user"
        />

    <item android:id="@+id/menu_hook_all"
        android:title="@string/hook_all_app"
        />
</menu>
